[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/pause/buttons/exit_buttons/pipe_button_twosided.tres" type="Theme" id=3]
[ext_resource path="res://gui/pause/exit/exit_menu.gd" type="Script" id=5]

[node name="ExitMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.191
anchor_right = 0.809
anchor_bottom = 1.0
size_flags_vertical = 12

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_right = 395.0
margin_bottom = 88.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 395.0
margin_bottom = 268.0
size_flags_vertical = 7
size_flags_stretch_ratio = 2.0

[node name="ButtonExit" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 395.0
margin_bottom = 56.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_vertical = 3
theme = ExtResource( 3 )
theme_type_variation = "ButtonBlue"
disabled = true
button_mask = 3

[node name="Text" type="Label" parent="VBoxContainer/VBoxContainer/ButtonExit"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -8.0
margin_bottom = 8.0
theme = ExtResource( 3 )
text = "EXIT LEVEL"
align = 1
valign = 1

[node name="ButtonQuit" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 395.0
margin_bottom = 116.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_vertical = 3
theme = ExtResource( 3 )
theme_type_variation = "ButtonRed"
button_mask = 3

[node name="Text" type="Label" parent="VBoxContainer/VBoxContainer/ButtonQuit"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -8.02
margin_bottom = 7.5
rect_pivot_offset = Vector2( 178, 8 )
theme = ExtResource( 3 )
text = "QUIT TO TITLE"
align = 1
valign = 1

[node name="ButtonClose" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 395.0
margin_bottom = 176.0
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_vertical = 3
theme = ExtResource( 3 )
theme_type_variation = "ButtonBlack"
button_mask = 3

[node name="Text" type="Label" parent="VBoxContainer/VBoxContainer/ButtonClose"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -8.02
margin_bottom = 7.5
rect_pivot_offset = Vector2( 178, 8 )
theme = ExtResource( 3 )
text = "CLOSE GAME"
align = 1
valign = 1

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 272.0
margin_right = 395.0
margin_bottom = 360.0
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/VBoxContainer/ButtonExit" to="." method="_on_ButtonExitLevel_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuitToTitle_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/ButtonClose" to="." method="_on_ButtonCloseGame_pressed"]
